kuber3.3/manifest/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort:  80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: service-frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
