kuber3.3/manifest/stock.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort:  80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: service-frontend
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: cache
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort:  80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: service-cache
spec:
  selector:
    app: cache
  ports:
  - protocol: TCP
    port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort:  80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: service-backend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 80

---
