kuber3.3/manifest/network-policy-denyall.yaml
# deny all
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    namespace: app
    name: default-deny
spec:
  podSelector: {}
  policyTypes:
  - Ingress
